# pytorch_yolos

./: .gitignore  README.md  bugelimin_record.md
cfgs/: default.yaml  hyp.scratch.yaml  opt.yaml
cppcodes/: CMakeLists.txt  main.cpp
cppcodes/models/: block.cpp  block.h  common.cpp  common.h  conv.cpp  conv.h  head.cpp  head.h  yolo.cpp  yolo.h
cppcodes/src/: BaseModel.h  SpecTest.cpp  SpecTest.h  YOLODataset.cpp  YOLODataset.h  lambda_lr.cpp  lambda_lr.h  loss.cpp  plots.cpp  plots.h  progressbar.h  test.cpp  test.h  train.cpp  train.h  utils.cpp  utils.h  yaml_load.cpp  yaml_load.h
cppcodes/utils/: augmentations.cpp  augmentations.h  datasets.cpp  datasets.h  general.cpp  general.h  loss.cpp  loss.h  metrics.cpp  metrics.h  tal.cpp  tal.h  torch_utils.cpp  torch_utils.h
data/: coco128-seg.yaml  coco128.yaml  coco128_c.yaml
pycodes/: export_new.py  myutils.py
